Text contrast fixed in all website

--- a/client/src/header/header.css
+++ b/client/src/header/header.css
@@ -35,6 +35,6 @@
 }
 
 .main-header nav a:hover {
-    background-color: #4CAF50;
+    background-color: #2E7D32;
     color: white;
 }
